--- a/asset/src/scss/content/_projects.scss
+++ b/asset/src/scss/content/_projects.scss
@@ -12,7 +12,7 @@
 	ul {
 		padding: 30px 0;
 		li {
-			@include breakpoint("max-width: 40em") {
+			@include breakpoint("max-width: 45em") {
 				width: 80%;
 			}
 			padding: 15px 10%;
@@ -23,7 +23,7 @@
 	}
 	
 
-	@include breakpoint("min-width: 40em") {
+	@include breakpoint("min-width: 45em") {
 		ul {
 			padding: 0;
 
